# market-pulse-engine

./: .dockerignore  .gitignore  README.md  ROADMAP.md  docker-compose.yml  prometheus.yml  technical_concepts.md
api/: .dockerignore  Dockerfile  api.py  config.py  main.py  pyproject.toml
api/core/: telementary.py
api/routers/: query.py
api/services/: rag_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx  Sidebar.tsx  Terminal.tsx  Topbar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: websocket.ts
frontend/src/pages/: AITerminal.tsx  Analytics.tsx  Dashboard.tsx  SystemStatus.tsx
frontend/src/types/: websocket.ts
gateway/: Dockerfile  go.mod  go.sum  main.go  telemetry.go
producer/: Dockerfile  go.mod  go.sum  main.go
worker/: Dockerfile  config.py  ingest_wisdom.py  pyproject.toml  test_sprint1.py  worker.py
worker/core/: telemetry.py
worker/services/: ingestion_service.py
