[project]
name = "api"
version = "0.1.0"
description = "MarketPulse Query Engine API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "langchain>=0.3.0",
    "langchain-openai>=1.1.9",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-requests>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "uvicorn[standard]>=0.41.0",
    "websockets>=15.0",
]
